--- a/customize/src/main/res/layout/customize_cehuamianban_mian.xml
+++ b/customize/src/main/res/layout/customize_cehuamianban_mian.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/my_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-<com.example.hong.customize.cehua.ui.TestDragLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="#ff0000"/>
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="#0000ff"/>
-</com.example.hong.customize.cehua.ui.TestDragLayout>
+    android:background="#ffffff">
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/rl_title"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#18B4ED"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/iv_head"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/head" />
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/main_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:listSelector="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@+id/rl_title">
+    </ListView>
+
+</android.support.constraint.ConstraintLayout>
