--- a/customize/src/main/res/layout/customize_cehuamianban_mian.xml
+++ b/customize/src/main/res/layout/customize_cehuamianban_mian.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.hong.customize.cehua.ui.MLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/my_layout"
     android:layout_width="match_parent"
@@ -31,4 +31,4 @@
         app:layout_constraintTop_toBottomOf="@+id/rl_title">
     </ListView>
 
-</android.support.constraint.ConstraintLayout>
+</com.example.hong.customize.cehua.ui.MLinearLayout>
