--- a/customize/src/main/res/layout/customize_cehuamianban_mian.xml
+++ b/customize/src/main/res/layout/customize_cehuamianban_mian.xml
@@ -4,7 +4,9 @@
     android:id="@+id/my_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#ffffff">
+
 
     <RelativeLayout
         android:id="@+id/rl_title"
@@ -21,6 +23,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
             android:background="@drawable/head" />
+
     </RelativeLayout>
 
     <ListView
