--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="buttom_style" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">3dp</item>
+        <item name="android:drawablePadding">3dp</item>
+        <item name="android:button">@null</item>
+    </style>
 </resources>
