头部视差效果，* 运用到的知识点：overScrollBy   onGlobalLayout        * 弹性的插值器：OvershootInterpolator    ValueAnimator：数值发生器        listview.setOverScrollMode//永远不显示蓝色阴影

--- a/customize/src/main/res/layout/customize_cehua.xml
+++ b/customize/src/main/res/layout/customize_cehua.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/slideMenu"
-    android:background="@drawable/bg">
+    android:background="@drawable/cehua_bg">
 
     <!-- 菜单的布局 -->
     <include layout="@layout/customize_cehuamianban_menu"/>
