--- a/customize/src/main/res/layout/customize_cehuamianban_menu.xml
+++ b/customize/src/main/res/layout/customize_cehuamianban_menu.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/head" />
+        android:src="@drawable/cehua_head" />
 
     <ListView
         android:id="@+id/menu_listview"
