--- a/customize/src/main/res/layout/customize_mian_layout.xml
+++ b/customize/src/main/res/layout/customize_mian_layout.xml
@@ -22,4 +22,13 @@
         android:layout_marginTop="15dp"
         android:textColor="@android:color/black"/>
 
+    <TextView
+        android:id="@+id/tv_parallax"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="头部视差"
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"
+        android:textColor="@android:color/black"/>
+
 </LinearLayout>
