--- a/customize/src/main/res/layout/customize_quickindex.xml
+++ b/customize/src/main/res/layout/customize_quickindex.xml
@@ -16,6 +16,19 @@
         android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:background="#cc4433"
-        app:layout_constraintRight_toRightOf="parent" />
-
+        app:layout_constraintRight_toRightOf="parent"/>
+<TextView
+    android:id="@+id/currentWord"
+    android:layout_width="110dp"
+    android:layout_height="110dp"
+    android:text="A"
+    android:textColor="@android:color/white"
+    android:textSize="50sp"
+    android:textStyle="bold"
+    android:gravity="center"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:background="@drawable/customize_quickindex_toast_shape"/>
 </android.support.constraint.ConstraintLayout>
