--- a/customize/src/main/res/layout/customize_mian_layout.xml
+++ b/customize/src/main/res/layout/customize_mian_layout.xml
@@ -39,4 +39,13 @@
         android:textSize="16sp"
         android:layout_marginTop="15dp"
         android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/tv_gooview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="粘性控件"
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
