--- a/customize/src/main/res/layout/customize_mian_layout.xml
+++ b/customize/src/main/res/layout/customize_mian_layout.xml
@@ -48,4 +48,13 @@
         android:textSize="16sp"
         android:layout_marginTop="15dp"
         android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/stellar_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="星球地图"
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
