增加字符串排序自定义控件，字符串单元格自动适配

--- a/customize/src/main/res/layout/customize_mian_layout.xml
+++ b/customize/src/main/res/layout/customize_mian_layout.xml
@@ -57,4 +57,12 @@
         android:textSize="16sp"
         android:layout_marginTop="15dp"
         android:textColor="@android:color/black"/>
+    <TextView
+        android:id="@+id/string_sort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="字符串顺序摆放"
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
