优酷旋转的按钮的 特效 这里用到了fragment跳转fragment

--- a/features/src/main/res/layout/features_mian_layout.xml
+++ b/features/src/main/res/layout/features_mian_layout.xml
@@ -12,4 +12,12 @@
         android:textSize="16sp"
         android:layout_marginTop="15dp"
         android:textColor="@android:color/black"/>
+    <TextView
+        android:id="@+id/tv_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="按钮开关"
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
