--- a/customize/src/main/res/layout/customize_mian_layout.xml
+++ b/customize/src/main/res/layout/customize_mian_layout.xml
@@ -65,4 +65,12 @@
         android:textSize="16sp"
         android:layout_marginTop="15dp"
         android:textColor="@android:color/black"/>
+    <TextView
+        android:id="@+id/youku_texiao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="优酷特效"
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
