--- a/features/src/main/res/layout/features_mian_layout.xml
+++ b/features/src/main/res/layout/features_mian_layout.xml
@@ -20,4 +20,12 @@
         android:textSize="16sp"
         android:layout_marginTop="15dp"
         android:textColor="@android:color/black"/>
+    <TextView
+        android:id="@+id/tv_xialaxaunze"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="下选择"
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"
+        android:textColor="@android:color/black"/>
 </LinearLayout>
