--- a/frame/src/main/res/layout/frame_main_fragment.xml
+++ b/frame/src/main/res/layout/frame_main_fragment.xml
@@ -67,4 +67,13 @@
         android:text="RxJava"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/evevt_bus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="EventBus"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 </LinearLayout>
