--- a/frame/src/main/res/layout/frame_main_fragment.xml
+++ b/frame/src/main/res/layout/frame_main_fragment.xml
@@ -76,4 +76,12 @@
         android:text="EventBus"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
+    <TextView
+        android:id="@+id/recyclerview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="recyclerview"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 </LinearLayout>
