Glide加载照片的各种方法 1、使用了transformations的特效类库让照片有特效 2、recyclerview的照片加载中使用使用到了anim里的自定义缩放特效

--- a/frame/src/main/res/layout/frame_main_fragment.xml
+++ b/frame/src/main/res/layout/frame_main_fragment.xml
@@ -42,15 +42,6 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/glide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Glide"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
-
-    <TextView
         android:id="@+id/greendao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,6 +73,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="recyclerview"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
+    <TextView
+        android:id="@+id/glide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Glide图片加载"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 </LinearLayout>
